munientry-net/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: munientry
  labels:
    app.kubernetes.io/name: munientry
    app.kubernetes.io/managed-by: kustomize
    environment: development
